--- a/guides/install_chrome.html
+++ b/guides/install_chrome.html
@@ -9,15 +9,16 @@
 <body>
     <header>
         <h1>How to Install Google Chrome</h1>
+        <a href="../index.html">Back to Home</a>
     </header>
     <main>
+        <h2>Steps to Install:</h2>
         <ol>
-            <li>Go to the <a href="https://www.google.com/chrome/" target="_blank">official Chrome website</a>.</li>
-            <li>Click the "Download Chrome" button.</li>
-            <li>Follow the prompts to save and install the file.</li>
-            <li>Open Chrome and log in with your Google account.</li>
+            <li>Visit the <a href="https://www.google.com/chrome/" target="_blank">official Chrome website</a>.</li>
+            <li>Click the "Download Chrome" button and follow the prompts.</li>
+            <li>Open Chrome and sign in with your Google account to sync your settings.</li>
         </ol>
-        <p>For more help, check out our troubleshooting guide!</p>
+        <img src="../assets/images/install_step_1.png" alt="Chrome Installation Step 1">
     </main>
     <footer>
         <p>&copy; 2025 ChromeStarterGuide</p>
