--- a/guides/install_chrome.html
+++ b/guides/install_chrome.html
@@ -15,10 +15,9 @@
         <h2>Steps to Install:</h2>
         <ol>
             <li>Visit the <a href="https://www.google.com/chrome/" target="_blank">official Chrome website</a>.</li>
-            <li>Click the "Download Chrome" button and follow the prompts.</li>
-            <li>Open Chrome and sign in with your Google account to sync your settings.</li>
+            <li>Click "Download Chrome" and follow the setup prompts.</li>
+            <li>Log in to Chrome with your Google account to sync settings.</li>
         </ol>
-        <img src="../assets/images/install_step_1.png" alt="Chrome Installation Step 1">
     </main>
     <footer>
         <p>&copy; 2025 ChromeStarterGuide</p>
