--- a/guides/chrome_flags.html
+++ b/guides/chrome_flags.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Chrome Flags - Unlock Advanced Features</h1>
+        <h1>Discover Chrome Flags</h1>
         <a href="../index.html">Back to Home</a>
     </header>
     <main>
-        <p>Chrome Flags allow you to enable experimental features to supercharge your browsing experience.</p>
+        <p>Chrome Flags are experimental features that can enhance your browsing experience.</p>
         <ul>
-            <li><strong>Parallel Downloading:</strong> Improves download speed. <code>chrome://flags/#enable-parallel-downloading</code></li>
-            <li><strong>Dark Mode:</strong> Enables dark mode for websites. <code>chrome://flags/#enable-force-dark</code></li>
-            <li><strong>Tab Groups Save:</strong> Saves grouped tabs for easy recovery. <code>chrome://flags/#tab-groups-save</code></li>
+            <li><strong>Parallel Downloading:</strong> Boosts download speed. <code>chrome://flags/#enable-parallel-downloading</code></li>
+            <li><strong>Dark Mode:</strong> Activates dark mode for websites. <code>chrome://flags/#enable-force-dark</code></li>
+            <li><strong>Tab Groups Save:</strong> Saves grouped tabs for later. <code>chrome://flags/#tab-groups-save</code></li>
         </ul>
     </main>
     <footer>
