--- a/guides/extensions.html
+++ b/guides/extensions.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Extensions</title>
+    <title>Extensions</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Top Chrome Extensions</h1>
+        <h1>Essential Chrome Extensions</h1>
         <a href="../index.html">Back to Home</a>
     </header>
     <main>
-        <h2>Must-Have Extensions:</h2>
         <ul>
-            <li><strong>Adblock Plus:</strong> Blocks intrusive ads.</li>
-            <li><strong>StayFocusd:</strong> Helps manage your browsing time.</li>
-            <li><strong>Grammarly:</strong> Enhances your writing with grammar and style suggestions.</li>
+            <li><strong>Adblock Plus:</strong> Block unwanted ads for a smoother browsing experience.</li>
+            <li><strong>Grammarly:</strong> Perfect your writing with grammar suggestions.</li>
+            <li><strong>StayFocusd:</strong> Manage your browsing time effectively.</li>
         </ul>
     </main>
     <footer>
