--- a/guides/themes.html
+++ b/guides/themes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customizing Themes</title>
+    <title>Themes</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
     <main>
         <h2>Steps to Customize:</h2>
         <ol>
-            <li>Open Chrome and go to Settings > Appearance > Themes.</li>
-            <li>Browse the Chrome Web Store for a theme that suits your style.</li>
-            <li>Click "Add to Chrome" to apply the theme instantly.</li>
+            <li>Go to Chrome Settings > Appearance > Themes.</li>
+            <li>Browse themes on the Chrome Web Store.</li>
+            <li>Click "Add to Chrome" to apply your favorite theme instantly.</li>
         </ol>
     </main>
     <footer>
