--- a/guides/productivity_hacks.html
+++ b/guides/productivity_hacks.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Productivity Hacks for Chrome Users</h1>
+        <h1>Productivity Hacks</h1>
         <a href="../index.html">Back to Home</a>
     </header>
     <main>
         <ul>
-            <li>Pin important tabs by right-clicking on the tab and selecting "Pin."</li>
-            <li>Use "Ctrl + Shift + T" to reopen closed tabs instantly.</li>
-            <li>Set up profiles for work and personal browsing to stay organized.</li>
+            <li><strong>Reopen Closed Tabs:</strong> Press <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>T</kbd> to restore closed tabs.</li>
+            <li><strong>Pin Tabs:</strong> Right-click on a tab and select "Pin" to keep it fixed.</li>
+            <li><strong>Use Profiles:</strong> Create separate profiles for work and personal browsing.</li>
         </ul>
     </main>
     <footer>
