--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to ChromeStarterGuide</h1>
-        <button id="themeToggle">Toggle Dark Mode</button>
-        <nav>
-            <ul>
-                <li><a href="guides/install_chrome.html">Install Chrome</a></li>
-                <li><a href="guides/chrome_flags.html">Chrome Flags</a></li>
-                <li><a href="guides/extensions.html">Extensions</a></li>
-                <li><a href="guides/themes.html">Themes</a></li>
-                <li><a href="guides/productivity_hacks.html">Productivity Hacks</a></li>
-            </ul>
-        </nav>
-        <form id="searchForm">
-            <input type="text" id="searchInput" placeholder="Search guides..." />
-            <button type="submit">Search</button>
-        </form>
-    </header>
-    <main>
-        <p>
-            Congratulations on your first computer! ChromeStarterGuide is your ultimate resource for customizing and mastering Google Chrome. From installation to advanced features, explore our comprehensive guides to make Chrome truly yours.
-        </p>
-    </main>
-    <footer>
-        <p>&copy; 2025 ChromeStarterGuide. All rights reserved.</p>
-    </footer>
+    <div class="background">
+        <header>
+            <h1>Welcome to ChromeStarterGuide</h1>
+            <button id="themeToggle">Toggle Dark Mode</button>
+            <nav>
+                <ul>
+                    <li><a href="guides/install_chrome.html">Install Chrome</a></li>
+                    <li><a href="guides/chrome_flags.html">Chrome Flags</a></li>
+                    <li><a href="guides/extensions.html">Extensions</a></li>
+                    <li><a href="guides/themes.html">Themes</a></li>
+                    <li><a href="guides/productivity_hacks.html">Productivity Hacks</a></li>
+                </ul>
+            </nav>
+            <form id="searchForm">
+                <input type="text" id="searchInput" placeholder="Search guides..." />
+                <button type="submit">Search</button>
+            </form>
+        </header>
+        <main>
+            <p>
+                Welcome to ChromeStarterGuide, the resource for transforming your Google Chrome experience. From installation tutorials to customizing themes, extensions, and experimental features, we cover it all. Get ready to master your new browser with ease and style.
+            </p>
+        </main>
+        <footer>
+            <p>&copy; 2025 ChromeStarterGuide. All rights reserved.</p>
+        </footer>
+    </div>
     <script src="js/theme.js"></script>
     <script src="js/search.js"></script>
 </body>
