--- a/index.html
+++ b/index.html
@@ -20,66 +20,126 @@
             transition: background-color 0.3s ease, color 0.3s ease;
         }
 
-        /* Banner Section */
-        .banner {
-            background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/41810341995087.57bd505fc7b34.gif');
-            background-size: cover;
-            background-position: center;
-            text-align: center;
-            padding: 50px 20px;
+        a {
+            text-decoration: none;
+            color: #00d1b2;
         }
 
-        .banner h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        a:hover {
+            text-decoration: underline;
         }
 
-        .theme-toggle {
-            position: absolute;
-            top: 20px;
-            right: 20px;
+        /* Header and Navbar */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: rgba(0, 0, 0, 0.8);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
-        #themeToggle {
-            background: none;
-            border: none;
+        header .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        nav {
+            display: flex;
+        }
+
+        nav ul {
+            display: flex;
+            list-style: none;
+        }
+
+        nav ul li {
+            margin-left: 20px;
+        }
+
+        nav ul li a {
+            font-size: 1rem;
+            color: white;
+        }
+
+        nav ul li a:hover {
+            color: #00d1b2;
+        }
+
+        /* Mobile Sidebar Menu */
+        .menu-icon {
+            display: none;
             font-size: 1.5rem;
             cursor: pointer;
         }
 
+        .sidebar {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            z-index: 1001;
+        }
+
+        .sidebar ul {
+            list-style: none;
+        }
+
+        .sidebar ul li {
+            margin-bottom: 20px;
+        }
+
+        .sidebar ul li a {
+            font-size: 1.2rem;
+        }
+
+        .sidebar .close-btn {
+            display: block;
+            text-align: right;
+            font-size: 1.5rem;
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
+        /* Search Bar */
         .search-bar {
-            margin-top: 20px;
+            position: absolute;
+            top: 10px;
+            left: 20px;
+            display: flex;
+            align-items: center;
         }
 
         .search-bar input {
             padding: 10px;
-            width: 70%;
-            border: none;
+            width: 200px;
             border-radius: 5px;
+            border: none;
         }
 
         .search-bar button {
             padding: 10px;
-            background-color: #008cba;
-            color: #fff;
+            margin-left: 10px;
+            background-color: #00d1b2;
+            color: white;
             border: none;
-            cursor: pointer;
             border-radius: 5px;
+            cursor: pointer;
         }
 
         /* Section Styles */
-        main {
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
         section {
-            margin-bottom: 30px;
             padding: 20px;
-            border: 2px solid #008cba;
+            margin: 20px;
+            background-color: rgba(0, 0, 0, 0.8);
             border-radius: 10px;
-            background-color: rgba(0, 0, 0, 0.6);
         }
 
         h2 {
@@ -92,49 +152,6 @@
             line-height: 1.6;
         }
 
-        /* Animations */
-        section {
-            animation: fadeIn 0.7s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* FAQs Section */
-        .faq {
-            cursor: pointer;
-            padding: 10px;
-            background-color: #008cba;
-            color: #fff;
-            border: none;
-            text-align: left;
-            font-size: 1.2rem;
-            margin: 10px 0;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .faq:hover {
-            background-color: #005f8a;
-        }
-
-        .faq-content {
-            display: none;
-            padding: 10px;
-            background-color: #333;
-            border: 1px solid #555;
-            border-radius: 5px;
-            margin-top: 5px;
-        }
-
         /* Footer */
         footer {
             background-color: #333;
@@ -144,37 +161,76 @@
 
         /* Dark Mode */
         body.dark-mode {
-            background-color: #000;
+            background-color: #000000;
             color: #e0e0e0;
         }
 
-        body.dark-mode footer {
+        header.dark-mode {
+            background-color: rgba(50, 50, 50, 0.8);
+        }
+
+        footer.dark-mode {
             background-color: #1f1f1f;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .menu-icon {
+                display: block;
+            }
+
+            nav {
+                display: none;
+            }
+
+            .search-bar {
+                top: 60px;
+                width: 100%;
+                justify-content: center;
+            }
+
+            .search-bar input {
+                width: 70%;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Banner Section -->
-    <section class="banner">
-        <header>
-            <h1>Welcome to ChromeStarterGuide</h1>
-            <div class="theme-toggle">
-                <button id="themeToggle">
-                    <span id="themeIcon">🌞</span>
-                </button>
-            </div>
-        </header>
-        <div class="search-bar">
-            <form id="searchForm">
-                <input type="text" id="searchInput" placeholder="Search guides, FAQs, or features...">
-                <button type="submit">Search</button>
-            </form>
-        </div>
-    </section>
+    <!-- Header -->
+    <header>
+        <div class="logo">ChromeStarterGuide</div>
+        <div class="menu-icon" id="menuIcon">☰</div>
+        <nav>
+            <ul>
+                <li><a href="#install-chrome">Install Chrome</a></li>
+                <li><a href="#chrome-flags">Chrome Flags</a></li>
+                <li><a href="#extensions">Extensions</a></li>
+                <li><a href="#themes">Themes</a></li>
+                <li><a href="#faqs">FAQs</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Sidebar for Mobile -->
+    <div class="sidebar" id="sidebar">
+        <div class="close-btn" id="closeSidebar">×</div>
+        <ul>
+            <li><a href="#install-chrome">Install Chrome</a></li>
+            <li><a href="#chrome-flags">Chrome Flags</a></li>
+            <li><a href="#extensions">Extensions</a></li>
+            <li><a href="#themes">Themes</a></li>
+            <li><a href="#faqs">FAQs</a></li>
+        </ul>
+    </div>
+
+    <!-- Search Bar -->
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Search guides, FAQs, or features...">
+        <button id="searchButton">Search</button>
+    </div>
 
     <!-- Content Sections -->
     <main>
-        <!-- Guide 1: Install Chrome -->
         <section id="install-chrome">
             <h2>How to Install Google Chrome</h2>
             <p>Follow these steps to install Chrome:</p>
@@ -183,29 +239,9 @@
                 <li>Click "Download Chrome" and install the setup file.</li>
                 <li>Log in with your Google account.</li>
             </ol>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/kpYyPznkCxw" 
-            title="Install Chrome Tutorial" frameborder="0" allowfullscreen></iframe>
         </section>
 
-        <!-- FAQs -->
-        <section id="faqs">
-            <h2>FAQs</h2>
-            <button class="faq">What is Google Chrome?</button>
-            <div class="faq-content">Google Chrome is a fast, free web browser developed by Google.</div>
-
-            <button class="faq">How do I update Chrome?</button>
-            <div class="faq-content">Go to Chrome Menu > Help > About Google Chrome, and it will update automatically if needed.</div>
-        </section>
-
-        <!-- Resources Section -->
-        <section id="resources">
-            <h2>Downloadable Resources</h2>
-            <p>Get additional resources to enhance your learning:</p>
-            <ul>
-                <li><a href="resources/chrome_installation_guide.pdf" target="_blank">Chrome Installation Guide (PDF)</a></li>
-                <li><a href="resources/chrome_tips_and_tricks.pdf" target="_blank">Chrome Tips and Tricks (PDF)</a></li>
-            </ul>
-        </section>
+        <!-- More pages added here... -->
     </main>
 
     <!-- Footer -->
@@ -214,50 +250,42 @@
     </footer>
 
     <script>
-        // Dark Mode Toggle with Sun/Moon Icons
+        // Dark Mode Toggle
         const themeToggle = document.getElementById('themeToggle');
-        const themeIcon = document.getElementById('themeIcon');
         const body = document.body;
 
         if (localStorage.getItem('theme') === 'dark') {
             body.classList.add('dark-mode');
-            themeIcon.textContent = '🌙';
         }
 
         themeToggle.addEventListener('click', () => {
             body.classList.toggle('dark-mode');
-            if (body.classList.contains('dark-mode')) {
-                themeIcon.textContent = '🌙';
-                localStorage.setItem('theme', 'dark');
-            } else {
-                themeIcon.textContent = '🌞';
-                localStorage.setItem('theme', 'light');
-            }
+            const isDarkMode = body.classList.contains('dark-mode');
+            localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
+        });
+
+        // Mobile Sidebar Toggle
+        const menuIcon = document.getElementById('menuIcon');
+        const sidebar = document.getElementById('sidebar');
+        const closeSidebar = document.getElementById('closeSidebar');
+
+        menuIcon.addEventListener('click', () => {
+            sidebar.style.display = 'block';
+        });
+
+        closeSidebar.addEventListener('click', () => {
+            sidebar.style.display = 'none';
         });
 
         // Search Functionality
-        const searchForm = document.getElementById('searchForm');
-        searchForm.addEventListener('submit', (event) => {
-            event.preventDefault();
+        const searchButton = document.getElementById('searchButton');
+        searchButton.addEventListener('click', () => {
             const query = document.getElementById('searchInput').value.toLowerCase();
             if (query.includes('install')) {
                 window.location.href = '#install-chrome';
-            } else if (query.includes('faqs')) {
-                window.location.href = '#faqs';
-            } else if (query.includes('resources')) {
-                window.location.href = '#resources';
             } else {
-                alert('No results found. Try another keyword.');
+                alert('No results found!');
             }
-        });
-
-        // FAQs Toggle Functionality
-        const faqs = document.querySelectorAll('.faq');
-        faqs.forEach(faq => {
-            faq.addEventListener('click', () => {
-                const content = faq.nextElementSibling;
-                content.style.display = content.style.display === 'block' ? 'none' : 'block';
-            });
         });
     </script>
 </body>
